apps/kube/kasm/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: kasm
    labels:
        app.kubernetes.io/part-of: kasm
